syntax = "proto3";

package cache;

import "google/protobuf/any.proto";

message AuthEnvelope{
    ChangeType ctxType = 1;
    google.protobuf.Any context = 2;
}
enum ChangeType {
    UNKNOWN_CTX_TYPE = 0;
    BASIC = 1;
    API = 2;
    OAUTH = 3;
}
message BasicAuthCtx {
    string user=1;
    string pass=2;
}
message ApiKeyCtx {
    string apiKey=1;

}
message OAuthCtx {
    string oath=1;
}

message ApiKeyMessage {
    string key = 1;
}
